# django-example

./: .pre-commit-config.yaml  README.md  README.rst  manage.py  pyproject.toml
core/: admin.py  apps.py  settings.py
core/templates/admin/: base.html
