[project]
name = "django-example"
version = "0.1.0"
description = "An example django project"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12" ]
dependencies = [
  "black>=24.10",
  "django>=5.1.2",
  "pre-commit>=4.0.1",
]
